# foo

./: CMakeLists.txt  depends.cmake  foo.c  foo.h  foobar.c  foobaz.c
.github/workflows/: ci.yml
